[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"  # Important! wgpu/Bevy needs this!

# Enable a small amount of optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (incl. Bevy), but not this code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.1"
bevy_flycam = "*"
